--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <img class="quizImage" src="Monster-High-Logo.png">
     <div class="answer-div">
         <h3>Favorite Number (1-100)</h3>
-        <input class="fav number" placeholder="your answer">
+        <input class="favNumber" placeholder="your answer">
         <br> <br>
         <h3>Pink or Black</h3>
-        <input class="fav number" placeholder="your answer">
+        <input class="pinkBlack" placeholder="your answer">
         <br>
-        <button class="Finish">♡ Submit ♡</button>
+        <button class="finish">♡ Submit ♡</button>
         <div class="answer-message"></div>
     </div>
  
