--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>What Ghoul Are You?</h1>
-    <img class="quizImage" src="Monster-High-Logo.png">
+    <img class="quizImage" src="MonsterHighLogo (2).png">
     <div class="answer-div">
         <h3>Favorite Number (1-100)</h3>
         <input class="favNumber" placeholder="your answer">
